// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateApp > should generate the app script for a dynamic page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"
import { getLocaleFromPath } from "@inglorious/ssx/i18n"

const normalizePathname = (path = "/") => path.split("?")[0].split("#")[0]
const normalizeRoutePath = (path = "/") => {
  const pathname = normalizePathname(path)
  if (pathname.length > 1 && pathname.endsWith("/")) {
    return pathname.slice(0, -1)
  }
  return pathname
}

const pages = [
  {
    "pattern": "/posts/:slug",
    "path": "/posts/my-first-post"
  }
]
const path = normalizeRoutePath(window.location.pathname)
const page = pages.find((page) => normalizeRoutePath(page.path) === path)

const types = { router }

const i18n = {}
const isDev = false

const entities = {
  router: {
    type: "router",
    path,
    route: page?.moduleName,
  },
  i18n: {
    type: "i18n",
    ...i18n,
  },

  "post": {
    "type": "post",
    "id": "post"
  }

}

const middlewares = []
if (isDev) {
  middlewares.push(createDevtools().middleware)
}

const systems = []
if (i18n.defaultLocale && i18n.locales?.length) {
  systems.push({
    routeChange(state, payload) {
      const routeType = payload?.route
      if (!routeType) return

      const entity = state[routeType]
      if (!entity) return

      entity.locale = getLocaleFromPath(payload.path, i18n)
    },
  })
}

setRoutes({
  "/posts/:slug": () => import("@/pages/post.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, systems, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;

exports[`generateApp > should generate the app script for a page that has metadata 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"
import { getLocaleFromPath } from "@inglorious/ssx/i18n"

const normalizePathname = (path = "/") => path.split("?")[0].split("#")[0]
const normalizeRoutePath = (path = "/") => {
  const pathname = normalizePathname(path)
  if (pathname.length > 1 && pathname.endsWith("/")) {
    return pathname.slice(0, -1)
  }
  return pathname
}

const pages = [
  {
    "pattern": "/blog",
    "path": "/blog"
  }
]
const path = normalizeRoutePath(window.location.pathname)
const page = pages.find((page) => normalizeRoutePath(page.path) === path)

const types = { router }

const i18n = {}
const isDev = false

const entities = {
  router: {
    type: "router",
    path,
    route: page?.moduleName,
  },
  i18n: {
    type: "i18n",
    ...i18n,
  },

  "blog": {
    "type": "blog",
    "id": "blog",
    "name": "Matteo Antony",
    "posts": []
  }

}

const middlewares = []
if (isDev) {
  middlewares.push(createDevtools().middleware)
}

const systems = []
if (i18n.defaultLocale && i18n.locales?.length) {
  systems.push({
    routeChange(state, payload) {
      const routeType = payload?.route
      if (!routeType) return

      const entity = state[routeType]
      if (!entity) return

      entity.locale = getLocaleFromPath(payload.path, i18n)
    },
  })
}

setRoutes({
  "/blog": () => import("@/pages/blog.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, systems, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;

exports[`generateApp > should generate the app script for a page with an entity 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"
import { getLocaleFromPath } from "@inglorious/ssx/i18n"

const normalizePathname = (path = "/") => path.split("?")[0].split("#")[0]
const normalizeRoutePath = (path = "/") => {
  const pathname = normalizePathname(path)
  if (pathname.length > 1 && pathname.endsWith("/")) {
    return pathname.slice(0, -1)
  }
  return pathname
}

const pages = [
  {
    "pattern": "/about",
    "path": "/about"
  }
]
const path = normalizeRoutePath(window.location.pathname)
const page = pages.find((page) => normalizeRoutePath(page.path) === path)

const types = { router }

const i18n = {}
const isDev = false

const entities = {
  router: {
    type: "router",
    path,
    route: page?.moduleName,
  },
  i18n: {
    type: "i18n",
    ...i18n,
  },

  "about": {
    "type": "about",
    "id": "about",
    "name": "Us"
  }

}

const middlewares = []
if (isDev) {
  middlewares.push(createDevtools().middleware)
}

const systems = []
if (i18n.defaultLocale && i18n.locales?.length) {
  systems.push({
    routeChange(state, payload) {
      const routeType = payload?.route
      if (!routeType) return

      const entity = state[routeType]
      if (!entity) return

      entity.locale = getLocaleFromPath(payload.path, i18n)
    },
  })
}

setRoutes({
  "/about": () => import("@/pages/about.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, systems, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;

exports[`generateApp > should generate the app script for a static page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"
import { getLocaleFromPath } from "@inglorious/ssx/i18n"

const normalizePathname = (path = "/") => path.split("?")[0].split("#")[0]
const normalizeRoutePath = (path = "/") => {
  const pathname = normalizePathname(path)
  if (pathname.length > 1 && pathname.endsWith("/")) {
    return pathname.slice(0, -1)
  }
  return pathname
}

const pages = [
  {
    "pattern": "/",
    "path": "/"
  }
]
const path = normalizeRoutePath(window.location.pathname)
const page = pages.find((page) => normalizeRoutePath(page.path) === path)

const types = { router }

const i18n = {}
const isDev = false

const entities = {
  router: {
    type: "router",
    path,
    route: page?.moduleName,
  },
  i18n: {
    type: "i18n",
    ...i18n,
  },

  "index": {
    "type": "index",
    "id": "index"
  }

}

const middlewares = []
if (isDev) {
  middlewares.push(createDevtools().middleware)
}

const systems = []
if (i18n.defaultLocale && i18n.locales?.length) {
  systems.push({
    routeChange(state, payload) {
      const routeType = payload?.route
      if (!routeType) return

      const entity = state[routeType]
      if (!entity) return

      entity.locale = getLocaleFromPath(payload.path, i18n)
    },
  })
}

setRoutes({
  "/": () => import("@/pages/index.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares, systems, autoCreateEntities: true })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route)
}, root)
"
`;
